<package>
  <name>tf2_geometry_msgs</name>
  <version>0.5.12</version>
  <description>
    tf2_geometry_msgs
  </description>
  <author>Wim Meeussen</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2_ros</url>
    
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>orocos_kdl</run_depend>
</package>

