<package>
  <name>tf2_ros_utils</name>
  <version>0.5.12</version>
  <description>
    This package contains basic functions useful for whoever is using tf2 with ROS.
    It contains time and type conversion functions, 
  </description>
  <author>Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://www.ros.org/wiki/tf2_ros_utils</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>tf2</run_depend>
</package>
